2022 base commit
- Updated WPILib to 2022.1.1
- Updated tooling (Gradle, VSCode, IDEA metadata)
- Removed relics from 2019 codebase (TOML files, TOML dependency)
- Removed unused elements of our library (OSC dependency, half-baked telemetry classes)
- Updates and autons from 2021 FIRST at Home season
- Fixed assorted typos in comments for physics and trajectory packages
- Fixed a major trajectory tracking bug whereby a torque was calculated instead of a voltage